--- a/AutomationPractice_api/AutomationPractice_api.csproj
+++ b/AutomationPractice_api/AutomationPractice_api.csproj
@@ -2,6 +2,7 @@
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
+        <RootNamespace>AutomationPractice_api</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
